--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Tuk trqbva da bude svurzvane na baza."
+    "DefaultConnection": "Tdotnet ef dbcontext scaffold "Server=(localdb)\MSSQLLocalDB;Database=Animals;Trusted_Connection=True;" Microsoft.EntityFrameworkCore.SqlServer -o Models -f
+"
   },
   "Logging": {
     "LogLevel": {
